# 5801Project

./: CMakeLists.txt  README.md  SRS Document.docx  SRS Voting Waterfall (1).docx  Use Cases.docx  Use Cases_ Voting System.docx  example_election_file.csv
Old Project 1 folder/: Driver.cpp  conio.h
Project1/Misc/: conio.h
Project1/src/: BallotBox.cpp  Candidates.cpp  Election.cpp  Election.h  Reporter.cpp  ReporterTest.cpp  main.cpp  mainpage.h
Project2/: Bug List.docx  ReadMe
Project2/Documentation/: Readme.txt
Project2/Misc/: CMakeLists.txt
Project2/Testing/: ReadMe.txt  example_election_file.csv
Project2/sprint_backlogs/: InitalSprintBackLog.xlsx  ReadMe.txt  SprintBackLog.xlsx  SprintBacklog4_16_20.xlsx  SprintBacklog4_20_20.xlsx  SprintBacklog4_23_20.xlsx  SprintBacklog4_27_20.xlsx
Project2/src/: BallotBox.cpp  CMakeLists.txt  Candidate.cpp  Candidate.h  Candidates.h  Driver.cpp  Election.cpp  Election.h  electionwizard.cpp  electionwizard.h  main.cpp
UI/Election/: Election.pro  electionwizard.cpp  electionwizard.h  mainwindow.cpp  mainwindow.h
docs/html/: BallotBox_8h_source.html  Candidate_8h_source.html  Candidates_8h_source.html  Election_8h_source.html  classBallotBox.html  classBallotBox__coll__graph.md5  classCandidate-members.html  classCandidate.html  classCandidate__coll__graph.md5  classCandidates.html  classDriver-members.html  classDriver.html  files.html  (+12 more)
p1code/: Driver.cpp  conio.h
src/: BallotBox.cpp  BallotBox.h  Bug List  CMakeLists.txt  Candidate.cpp  Candidate.h  Candidates.cpp  Candidates.h  Driver.cpp  Election.cpp  Election.h  Reporter.cpp  ReporterTest.cpp  main.cpp
(+298 files in other folders)
